--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ section {
     padding: 20px 20px 20px;
 }
 
-Article {
+article {
     color: #ebebeb;
     background-color: #777;
     height: 145px;
